# image-process-demo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
source/: commonDefine.h  grayTest.cpp  main.cpp
source/algorithm/: affineTransfrom.cpp  affineTransfrom.h  beautyIris.cpp  beautyIris.h  brightContrast.cpp  brightContrast.h  canny.cpp  canny.h  eyeBrow.cpp  eyeBrow.h  eyeLash.cpp  eyeLash.h  eyeLid.cpp  eyeLid.h  eyeLine.cpp  eyeLine.h  eyeShadow.cpp  eyeShadow.h  faceBlush.h  filter512.cpp  filter512.h  gaussFilter.cpp  gaussFilter.h  gray.cpp  gray.h  histagram.cpp  histagram.h  hsvAdjust.cpp  hsvAdjust.h  labAdjust.cpp  labAdjust.h  laplaceSharpen.cpp  laplaceSharpen.h  lipsRecolor.cpp  lipsRecolor.h  makeupBase.cpp  makeupBase.h  meanFilter.cpp  meanFilter.h  rgb2hsv.cpp  (+17 more)
source/mockAIData/: faceData.h
source/utils/: commonDefine.h  fileUtils.cpp  fileUtils.h  texture.cpp  texture.h
tests/: filter512.cpp
tests/HSVAdjust/: HSVAdjust.cpp  RGB2HSV.cpp  RGB2HSV.h
tests/beautyIris/: beautylrisTest.cpp  main.cpp
tests/beautyLris/: main.cpp
tests/brightContrast/: main.cpp
tests/canny/: main.cpp
tests/eyeShadow/: main.cpp
tests/faceBlush/: faceBlush.cpp  main.cpp  makeupBase.cpp  makeupBase.h
tests/filter512/: main.cpp
tests/gaussFilter/: main.cpp
tests/gray/: main.cpp
tests/histagram/: main.cpp
tests/hsvAdjust/: hsvAdjust.cpp  main.cpp
tests/labAdjust/: main.cpp
tests/laplaceSharpen/: main.cpp
tests/meanFilter/: main.cpp
tests/saturation/: main.cpp
tests/sobel/: main.cpp
tests/threshold/: main.cpp
tests/usm/: main.cpp
tests/yuvAdjust/: main.cpp
